--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quizlet-flashcard": "^3.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "yup": "^1.2.0",
